[package]
name = "tracing-print"
version = "0.0.0"
edition = "2021"
description = "Simple println format for tracing-subscriber"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/pbar1/tracing-print"
repository = "https://github.com/pbar1/tracing-print"
documentation = "https://docs.rs/tracing-print"

[dependencies]
anstream = { version = "0.6", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["std", "fmt", "registry"], default-features = false }
yansi = { version = "1", default-features = false }
